header markup&styles done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<header><i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></header>
+	<header>
+		<ul>
+			<li>DELETE ALL <i class="fa fa-trash-o" aria-hidden="true"></i></li>
+			<li>DELETE FAVORITE <i class="fa fa-star-o" aria-hidden="true"></i></li>
+			<li>SEARCH <i class="fa fa-search" aria-hidden="true"></i></li>
+		</ul>
+	</header>
 	<script type="text/javascript" src="build/main.bundle.js"></script>
 </body>
 </html>
