search makup&styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>IMDB</title>
+	<title>OMDB</title>
 	<!-- CSS -->
 	<link rel="stylesheet" href="build/styles.css">
 	<!-- FONTS -->
@@ -19,6 +19,12 @@
 			<li>SEARCH <i class="fa fa-search" aria-hidden="true"></i></li>
 		</ul>
 	</header>
+	<section class="searchSection">
+		<div class="search">
+			<input type="text" placeholder="Wanna find something?">
+			<div class="button">Search</div>
+		</div>
+	</section>
 	<script type="text/javascript" src="build/main.bundle.js"></script>
 </body>
 </html>
