items markup, factory of items

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 	<section class="searchSection">
 		<div class="search">
 			<input type="text" placeholder="Wanna find something?">
-			<div class="button">Search</div>
+			<div id="search" class="button">Search</div>
+		</div>
+	</section>
+	<section class="moviesSection">
+		<div class="favorites">
+		</div>
+		<div class="nonFavorites">
 		</div>
 	</section>
 	<script type="text/javascript" src="build/main.bundle.js"></script>
