--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 	<header>
 		<ul>
-			<li>DELETE ALL <i class="fa fa-trash-o" aria-hidden="true"></i></li>
-			<li>DELETE FAVORITE <i class="fa fa-star-o" aria-hidden="true"></i></li>
-			<li>SEARCH <i class="fa fa-search" aria-hidden="true"></i></li>
+			<li class="delAll">DELETE ALL <i class="fa fa-trash-o" aria-hidden="true"></i></li>
+			<li class="onlyFav">ONLY FAVORITE <i class="fa fa-star-o" aria-hidden="true"></i></li>
+			<li class="navSearch">SEARCH <i class="fa fa-search" aria-hidden="true"></i></li>
 		</ul>
 	</header>
 	<section class="searchSection">
