Got Technical task - yes just now :DD Add Filters markup

--- a/index.html
+++ b/index.html
@@ -25,11 +25,24 @@
 			<div id="search" class="button">Search</div>
 		</div>
 	</section>
+	<section class="filtersSection">
+		<div class="ser check"><label>TV series <input type="checkbox" id="ser"></label></div>
+		<div class="mov check"><label>Movie <input type="checkbox" id="mov"></label></div>
+		<div class="year"><input type="text" placeholder="Year" id="year"></div>
+		<div class="pages">
+			<div class="page">1</div>
+			<div class="page">2</div>
+			<div class="page">3</div>
+			<div class="page">4</div>
+			<div class="page">5</div>
+			<div class="page">6</div>
+			<div class="page">7</div>
+			<div class="page">8</div>
+			<div class="page">9</div>	
+		</div>
+	</section>
 	<section class="moviesSection">
-		<div class="favorites">
-		</div>
-		<div class="nonFavorites">
-		</div>
+		<div class="nonFavorites"></div>
 	</section>
 	<script type="text/javascript" src="build/main.bundle.js"></script>
 </body>
