--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 		</div>
 	</section>
 	<section class="filtersSection">
-		<div class="ser check"><label>TV series <input type="checkbox" id="ser"></label></div>
-		<div class="mov check"><label>Movie <input type="checkbox" id="mov"></label></div>
+		<div>
+			<select class="type">
+				<option selected value="movie">Movie</option>
+				<option value="series">Series</option>
+				<option value="episode">Episode</option>
+			</select>
+		</div>
 		<div class="year"><input type="text" placeholder="Year" id="year"></div>
 		<div class="pages">
 			<div class="page">1</div>
